ssl auth improvements for more readability and clarity in error messages and refactoring